--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ openpyxl==3.0.6
 pandas==1.1.5
 Pillow==8.1.0
 plotly==4.14.3
+psycopg2==2.8.6
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
